--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,9 +1,10 @@
 .postContainer{
-  border : 1px solid black;
+  
+  background-color: #fff;
   margin : 5px 15px 10px 15px;
   border-radius: 10px;
   padding: 8px;
-  box-shadow: 3px 3px 3px;
+  box-shadow: 0 0 0 1px #e3e5e8, 0 1px 2px 0 rgba(0,0,0,.04);
 }
 .postTitle{
   font-size: 1.2em;
@@ -18,5 +19,50 @@
   margin : 5px 15px 5px 15px
 }
 .writeBox{
-  margin : 5px 15px 5px 15px
+  margin : 5px 15px 5px 15px;
+  
 }
+
+body{
+  background-color: #fafbfc;
+}
+
+.listBox{
+  margin: 20px;
+  display: flex;
+  align-content: space-between;
+  flex-wrap: wrap;
+}
+.box{
+  width: 47%;
+  height : 100px;
+  background-color: #fff;
+  margin : 5px 5px 5px 5px;
+  border-radius: 10px;
+  padding: 8px;
+  box-shadow: 0 0 0 1px #e3e5e8, 0 1px 2px 0 rgba(0,0,0,.04);
+}
+
+
+
+.listBox img{
+  width: 30px;
+  margin: 3px 3px 10px 3px;
+}
+
+.search-box{
+  margin: 25px;
+  width: 90%;
+}
+
+.my-box{
+  width: 98%;
+  height : 50px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 8px;
+  box-shadow: 0 0 0 1px #e3e5e8, 0 1px 2px 0 rgba(0,0,0,.04);
+}
+
+
+
